# OpenDentalQueryTool

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  PROJECT_STATUS.md  QueryProcCode SQL.txt  README.md  make.ps1  pyproject.toml  setup.py  sitecustomize.py  tests-review.md
.codex/: auth.json
.codex/prompts/: speckit.plan.md  speckit.specify.md
.codex/sessions/2025/10/22/: rollout-2025-10-22T20-42-34-019a0ebb-686a-7872-9809-1bf5831a6693.jsonl  rollout-2025-10-22T20-43-30-019a0ebc-43eb-7e13-88f3-57eee85de763.jsonl
.codex/sessions/2025/10/23/: rollout-2025-10-23T11-49-17-019a11f9-892c-70c2-bfe8-9418c20e8c5f.jsonl  rollout-2025-10-23T12-48-40-019a122f-e700-7f90-9c81-59b53113323a.jsonl  rollout-2025-10-23T17-45-49-019a133f-f2d6-7e12-bda4-1d26ea0e9be1.jsonl  rollout-2025-10-23T19-10-59-019a138d-ea7b-75f2-a1ce-d30812514588.jsonl  rollout-2025-10-23T21-03-07-019a13f4-9582-7a80-8491-185783d091ba.jsonl
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  security.yml  test.yml
.specify/memory/: constitution.md
docs/: ALIAS_IMPLEMENTATION.md  API_REFERENCE.md  BULK_ADD_IMPLEMENTATION.md  BULK_ADD_OFFICES.md  COMMAND_ALIASES.md  CONTRIBUTING.md  GETTING_STARTED_SHORTCUTS.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SHORTCUTS_COMPARISON.md  SHORTCUTS_COMPLETE.md  SHORTCUTS_IMPLEMENTATION.md  TROUBLESHOOTING.md  api-reference.md  quickstart.md
packaging/pyinstaller/: build.py
requirements/: base.in  base.txt  dev.in  test.in
src/opendental_query/: __init__.py  __main__.py  constants.py
src/opendental_query/cli/: __init__.py  config_cmd.py  history_cmd.py  main.py  persist_cmd.py  query_cmd.py  saved_query_cmd.py  shortcuts.py  update_cmd.py  vault_cmd.py
src/opendental_query/core/: __init__.py  api_client.py  config.py  query_engine.py  retry.py  vault.py  vault_encryption.py
src/opendental_query/models/: __init__.py  audit.py  config.py  query.py  vault.py
src/opendental_query/renderers/: __init__.py  csv_exporter.py  excel_exporter.py  progress.py  table.py
src/opendental_query/utils/: __init__.py  app_logger.py  audit_logger.py  file_utils.py  formatting.py  persist_db.py  query_history_db.py  saved_queries.py  sql_parser.py  startup_check.py
src/respx/: __init__.py
tests/: __init__.py  conftest.py  test_audit_logger.py  test_file_utils.py  test_models.py  test_sql_parser.py  test_vault.py  test_vault_encryption.py
tests/integration/: test_audit_trail_integration.py  test_comprehensive_scenarios.py  test_config_lifecycle.py  test_integration.py  test_subset_query.py  test_vault_lifecycle.py
tests/unit/: test_api_client.py  test_app_logger.py  test_audit_logger.py  test_audit_logger_comprehensive.py  test_cli_main.py  test_config.py  test_csv_exporter.py  test_excel_exporter.py  test_excel_ux.py  test_excel_ux_features.py  test_history_cli.py  test_office_subset.py  test_persist_cmd.py  test_persist_db.py  test_progress_indicator.py  test_query_cmd.py  test_query_engine.py  test_query_history_db.py  test_query_proc_code_template.py  test_retry.py  test_saved_queries.py  test_saved_query_cmd.py  test_shortcuts.py  test_sql_parser_edge_cases.py  test_startup_check.py  test_table_renderer.py  test_update_checker.py
